--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
             padding: 0;
             background-color: #f4f6f8;
         }
-        header {
-            background-color: #003366;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
+        <header style="background-color: #003366; color: white; padding: 10px 0; text-align: center; position: relative;">
+    <!-- Logo do Jayme Campos -->
+    <img src="logo-jayme.png" alt="Logo Jayme Campos" style="position: absolute; top: 10px; left: 10px; height: 50px;">
+
+    <h1 style="margin: 0;">Senador Jayme Campos</h1>
+    <p style="margin: 5px 0 0;">Trabalho, compromisso e resultados para Mato Grosso</p>
+
+    <!-- Bandeira de Mato Grosso -->
+    <img src="bandeira-mt.png" alt="Bandeira de Mato Grosso" style="position: absolute; top: 10px; right: 10px; height: 40px;">
+</header>
         section {
             max-width: 900px;
             margin: 40px auto;
