--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     }
 
     .logo-jayme {
-      height: 50px;
+      height: 150px;
     }
 
     .header-text {
@@ -32,7 +32,7 @@
     }
 
     .bandeira-mt {
-      height: 35px;
+      height: 150px;
     }
 
     section {
@@ -98,15 +98,27 @@
   <section>
     <h2>Notícias</h2>
     <ul>
-      <li><strong><a href="https://www.exemplo.com/materia-saude" target="_blank">Jayme destina recursos para a saúde em todo o estado</a></strong><br>
-      Emendas viabilizam reformas de hospitais e aquisição de ambulâncias em diversas regiões de MT.</li>
-      <br>
-      <li><strong><a href="https://www.exemplo.com/materia-educacao" target="_blank">R$ 10 milhões para a educação técnica</a></strong><br>
-      Senador garante investimento para escolas técnicas em municípios do Norte e Noroeste mato-grossense.</li>
+        <li><a href="https://www.agenciadanoticia.com.br/mato-grosso/noticia/140429/projeto-de-jayme-campos-propoe-revelar-minerais-escondidos-nos-produtos-do-dia-a-dia" target="_blank">Jayme propõe revelar minerais escondidos nos produtos do dia a dia</a></li>
+        <li><a href="https://www.vgnoticias.com.br/politica/jayme-campos-propoe-transformar-riquezas-minerais-em-trunfo-contra-tarifaco-dos-eua/134473" target="_blank">Transformar riquezas minerais em trunfo contra tarifaço dos EUA</a></li>
+        <li><a href="https://issoenoticia.com.br/jayme-campos-defende-diplomacia-e-coalizao-internacional-contra-o-tarifaco/" target="_blank">Diplomacia e coalizão internacional contra o tarifaço</a></li>
+        <li><a href="https://fococidade.com.br/materia/69298/jayme-cobra-plano-de-contingencia-do-governo-federal-contra-tarifaco-" target="_blank">Jayme cobra plano de contingência contra tarifaço</a></li>
     </ul>
-    <img src="jayme-noticia.jpeg" alt="Jayme em visita técnica" class="noticia-image">
-  </section>
+    <img src="8950DE82-FAEA-4556-B028-3D2C698710B3.jpeg" alt="Jayme discursando" class="news-image">
+    <img src="875E4131-EF52-4E28-8AB3-97FFAAAA897A.jpeg" alt="Jayme com senadores" class="news-image">
+</section>
 
+<footer>
+    <p>&copy; 2025 Senador Jayme Campos | Desenvolvido para fins institucionais</p>
+    <div class="social-links">
+        <a href="https://www.instagram.com/jaymecamposmt?igsh=ODlidnV3dWVnd3U3" target="_blank">Instagram</a> |
+        <a href="https://m.facebook.com/jayme.campos/?" target="_blank">Facebook</a> |
+        <a href="https://x.com/jaymecamposmt?s=21" target="_blank">X (Twitter)</a> |
+        <a href="https://www.tiktok.com/@jaymecamposmt" target="_blank">TikTok</a>
+    </div>
+</footer>
+
+</body>
+</html>
   <footer>
     © 2025 Senador Jayme Campos | Desenvolvido para fins institucionais
   </footer>
