--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     }
 
     .logo-jayme {
-      height: 150px;
+      height: 190px;
     }
 
     .header-text {
@@ -32,7 +32,7 @@
     }
 
     .bandeira-mt {
-      height: 150px;
+      height: 130px;
     }
 
     section {
@@ -103,8 +103,8 @@
         <li><a href="https://issoenoticia.com.br/jayme-campos-defende-diplomacia-e-coalizao-internacional-contra-o-tarifaco/" target="_blank">Diplomacia e coalizão internacional contra o tarifaço</a></li>
         <li><a href="https://fococidade.com.br/materia/69298/jayme-cobra-plano-de-contingencia-do-governo-federal-contra-tarifaco-" target="_blank">Jayme cobra plano de contingência contra tarifaço</a></li>
     </ul>
-    <img src="8950DE82-FAEA-4556-B028-3D2C698710B3.jpeg" alt="Jayme discursando" class="news-image">
-    <img src="875E4131-EF52-4E28-8AB3-97FFAAAA897A.jpeg" alt="Jayme com senadores" class="news-image">
+    <img src="jayme-noticia.jpeg" alt="Jayme discursando" class="news-image">
+    <img src="8950DE82-FAEA-4556-B028-3D2C698710B3.jpeg" alt="Jayme com senadores" class="news-image">
 </section>
 
 <footer>
