--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
     }
 
     .bio-image,
-    .noticia-image {
-      width: 100%;
-      margin-top: 15px;
-      border-radius: 4px;
-    }
+    .news-image {
+            width: 100%;
+            margin-top: 15px;
+            border-radius: 8px;
+        }
 
     footer {
       background-color: #003366;
@@ -103,9 +103,8 @@
         <li><a href="https://issoenoticia.com.br/jayme-campos-defende-diplomacia-e-coalizao-internacional-contra-o-tarifaco/" target="_blank">Diplomacia e coalizão internacional contra o tarifaço</a></li>
         <li><a href="https://fococidade.com.br/materia/69298/jayme-cobra-plano-de-contingencia-do-governo-federal-contra-tarifaco-" target="_blank">Jayme cobra plano de contingência contra tarifaço</a></li>
     </ul>
-    <img src="jayme-noticia.jpeg" alt="Jayme discursando" class="news-image">
-    <img src="8950DE82-FAEA-4556-B028-3D2C698710B3.jpeg" alt="Jayme com senadores" class="news-image">
-</section>
+    <img src="jayme-noticia.jpeg" alt="Jayme com senadores" class="news-image">
+    </section>
 
 <footer>
     <p>&copy; 2025 Senador Jayme Campos | Desenvolvido para fins institucionais</p>
