--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     }
 
     .logo-jayme {
-      height: 190px;
+      height: 250px;
     }
 
     .header-text {
-      text-align: center;
+      margin: 500px;
       flex: 1;
     }
 
